samples/_failures_safe/1761667040_3bf709_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a8a00fb0.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
